[tool.poetry]
name = "cyclegan-core"
version = "0.1.0"
description = "Core side of CT-MRI bi-directional converter cycleGAN"
authors = ["Devadathan M B <devadathanmb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.0"
torchvision = "^0.17.0"
matplotlib = "^3.8.2"
ipython = "^8.21.0"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
